# sdk-collaboration-hub

./: .codacy.yml  .gitignore  .spec-lint-ignore  CHANGELOG.md  CLAUDE.md  CNAME  MAINTAINERS.md  README.md  SDK_CHANGELOG_AND_RELEASE_NOTES_GUIDELINES.md  github-comment-response.md  hip-1081.md  response-to-hendrikebbers-review.md
.claude/: hip-context.md  project_context.md  tck-context.md
.github/: 04-advanced-issue.yml  CODEOWNERS
guides/: SDK_CHANGELOG_AND_RELEASE_NOTES_GUIDELINES.md  api-best-practices-cpp.md  api-best-practices-go.md  api-best-practices-java.md  api-best-practices-js.md  api-best-practices-python.md  api-best-practices-rust.md  api-best-practices-swift.md  api-best-practices-ts.md  api-guideline.md  client-json-configuration-example.md  code-sample-guide.md  standardized-github-labels.md
hips/: hip-1046.md  hip-1139.md
meetings/: 2025-03-10.md  2025-04-21.md  2025-05-19.md  2025-06-02.md  2025-06-16.md
minutes/: 2025-03-24.md  2025-04-07.md  2025-05-05.md
v3-sandbox/prototype-python/: README.md  pyproject.toml
v3-sandbox/prototype-python/src/hiero_sdk_v3/keys/: __init__.py  key.py  key_algorithm.py  key_pair.py  key_type.py  private_key.py  public_key.py
v3-sandbox/prototype-python/src/hiero_sdk_v3/keys/_impl/: __init__.py  ecdsa_private_key.py  ecdsa_public_key.py  ed25519_private_key.py  ed25519_public_key.py
v3-sandbox/prototype-python/src/hiero_sdk_v3/keys/io/: __init__.py  byte_import_encoding.py  key_container.py  key_encoding.py  key_format.py  raw_format.py
v3-sandbox/prototype-python/tests/keys/: test_key_round_trip.py
(+379 files in other folders)
