[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiero-sdk-v3-keys-poc"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["cryptography>=42.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/hiero_sdk_v3"]
